add focus in input

--- a/src/Components/Playlist/Playlist.css
+++ b/src/Components/Playlist/Playlist.css
@@ -18,7 +18,11 @@
   border-bottom: 1px solid #6f6f6f;
   font-family: 'Poppins', sans-serif;
   font-size: 1.55rem;
-  color: #fff;
+  color: rgba(255, 255, 255, 0.5);
+}
+
+.Playlist input:focus::placeholder {
+  color: transparent;
 }
 
 .Playlist-save {
