--- a/src/Components/SearchBar/SearchBar.css
+++ b/src/Components/SearchBar/SearchBar.css
@@ -7,14 +7,18 @@
 }
 
 .SearchBar input {
-  width: 287px;
+  width: 387px;
   padding: 0.88rem 0;
   border: 1px solid #fff;
-  border-radius: 3px;
+  border-radius: 54px;
   margin-bottom: 2.22rem;
   color: #010c3f;
   text-align: center;
   font-size: 1rem;
+}
+
+.SearchBar input:focus::placeholder {
+  color: transparent;
 }
 
 .SearchBar input:focus {
